# rubix_realm

./: .gitignore  Cargo.toml  README.md  bezier.md  surface.md  todo.md
assets/: attributions.md
assets/shaders/: shader.wgsl  triangle.wgsl
examples/: bezier.rs  cursor_grab.rs  main_tester.rs  polynomial_eval.rs  wgpu_tester.rs
examples/util/: mod.rs  pipeline.rs
src/: cube.rs  lib.rs  n_test.rs
src/cube/: algorithms.rs  mod.rs  movements.rs  pieces.rs
src/geometry/: hypercube.rs  mod.rs  n_cube.rs
src/math/: bezier.rs  matrix.rs  mod.rs  numerical analysis.md  point.rs  polynomial_eval.rs  surface.rs
src/render/: fill.rs  input.rs  mod.rs  setup.rs  win_state.rs  window.rs
src/solver/: algorithms.rs  mod.rs
src/util/: mod.rs
winit/: cursor_grab.rs  lib.rs
winit/render/: surface.rs  win_state.rs
