[package]
name = "rubix_realm"
version = "0.0.1"
edition = "2021"
authors = ["Yrrrrrf <fernandorezacampos@gmail.com>"]
description = "RubixRealm is an interactive 3D Rubik's Cube simulator built with Rust and wgpu. It features an intuitive language for cube manipulation and provides a real-time solving algorithm for Rubik's Cube enthusiasts and 3D graphics learners."
license = "MIT License"
repository = "https://github.com/Yrrrrrf/rubix_realm"
keywords = ["rubiks-cube", "wgpu", "3d-graphics", "simulation", "friedrich-method"]
# documentation = "add a URL here"  # URL of the project's online documentation
readme = "README.md"  # Path to your project's README file
exclude = [  # Exclude these files from the package
    ".vscode*",  # editor config
    "resources/*",  # data files (csv, json, etc)
    "target/",  # build directory (compiled code)
    "Cargo.lock",  # lock file (dependency versions)
    ]
resolver = "2"  # Resolver version to use (https://doc.rust-lang.org/cargo/reference/resolver.html)


[profile.dev]
opt-level = 0  # no optimization for development

[profile.dev.package."*"]
opt-level = 3  # higher optimization for dependencies (to compensate for the lack of optimization in the main code)


[dependencies]
dev_utils = "0.*"  # many dev utils (https://docs.rs/dev_utils/latest/dev_utils/)
log = "0.*"  # logging (https://docs.rs/log/latest/log/)
env_logger = "0.*"  # logging (https://docs.rs/env_logger/latest/env_logger/)
wgpu = "0.*"  # wgpu (https://docs.rs/wgpu/latest/wgpu/)

pollster = "0.3"

# Optional dependencies (features)
image = { version = "0.*", optional = true }  # image loading (https://docs.rs/image/latest/image/)
winit = { version = "0.29.*", optional = true }  # windowing (https://docs.rs/winit/latest/winit/)


[features]
default = [
    "3d_render"
    ]  # no features by default

3d_render = [
    "winit", 
    "image",
]

full = [
    "3d_render",
]
